<resources>
    <string name="app_name">MADGame</string>
    <string name="status_cash">Cash: $%.2f</string>
    <string name="status_health">Health: %.2f HP</string>
    <string name="status_mass">Equip. Mass: %.2fkg</string>
    <string name="restart">Restart Game</string>
    <string name="game_status">Game Status: %s</string>
    <string name="game_status_won">Won</string>
    <string name="game_status_lost">Lost</string>
    <string name="direction_north">North</string>
    <string name="direction_east">East</string>
    <string name="direction_south">South</string>
    <string name="direction_west">West</string>
    <string name="area_town">Town</string>
    <string name="area_wilderness">Wilderness</string>
    <string name="area_type">Area Type: %s</string>
    <string name="area_description">Area Description</string>
    <string name="area_options">Options</string>
    <string name="edit_description">Description</string>
    <string name="item_buy">Buy</string>
    <string name="item_sell">Sell</string>
    <string name="item_grab">Grab</string>
    <string name="item_drop">Drop</string>
    <string name="item_use">Use</string>
    <string name="area_overview">Overview</string>
    <string name="options_leave">Leave</string>
    <string name="area_starred">Area Starred</string>
    <string name="market_area_items">Area Items</string>
    <string name="market_inventory_items">Inventory</string>
    <string name="item_action">%s %s</string>
    <string name="item_bought">Bought</string>
    <string name="item_grabbed">Grabbed</string>
    <string name="item_sold">Sold</string>
    <string name="item_dropped">Dropped</string>
    <string name="item_used">Used</string>
    <string name="area">Area</string>
    <string name="player">Player</string>
    <string name="status_mass_full">Equipment Mass: %.2fkg</string>
    <string name="game_status_message">You have %s the game!</string>
</resources>
