<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorPrimary"
    android:baselineAligned="false"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/activity_navigation">

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.5"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_cash" />

        <TextView
            android:id="@+id/textHealth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_health" />

        <TextView
            android:id="@+id/textEquipmentMass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_mass_full" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/textGameStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_status" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/restart" />

    </LinearLayout>
</LinearLayout>