<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AreaInfoFragment">

    <EditText
        android:id="@+id/textAreaDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/edit_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:focusable="true" />

    <CheckBox
        android:id="@+id/checkStarred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_starred"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textAreaType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/area_type"
        android:textAlignment="center" />

</LinearLayout>